convert newline caracter to formart unix or dos